--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
 
     <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
     <string name="gender_female">Female</string>
+    <string name="editor_insert_pet_failed">Failed to insert pet.</string>
+    <string name="editor_insert_pet_successful">Insert is sucessfull.</string>
 </resources>
